[tool.poetry]
name = "chenv"
version = "0.4.2"
description = "modern local environment management"
authors = ["Jonathan Shemer <i@jonathanshemer.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jonathan-shemer/chenv"
repository = "https://github.com/jonathan-shemer/chenv"
documentation = "https://chenv.readthedocs.io"
keywords = ["chenv", "dotenv", "enviroment"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
click = "^8.0.1"
marshmallow = "^3.13.0"
desert = "^2020.11.18"
python-dotenv = "^0.19.1"
httpx = "^0.19.0"
toolz = "^0.11.1"
questionary = "^1.10.0"
pytype = "^2021.10.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
flake8 = "^4.0.1"
black = "^21.9b0"
flake8-black = "^0.2.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.9.2"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
xdoctest = "^0.15.10"
sphinx = "^4.2.0"
sphinx-autodoc-typehints = "^1.12.0"
codecov = "^2.1.12"
pylint = "^2.11.1"
flake8-annotations = "^2.7.0"
pytype = "^2021.10.18"
coverage = "^6.0.2"

[tool.poetry.scripts]
chenv = "chenv.main:main"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
